@@ -1,5 +1,6 @@
 2023-02-04
 -	Fix FreeBSD include bug. #407
+-	Add geo info in JSON output when using GeoDB.  #402
 
 2023-01-29
 -	Move fwd_status in correct block in output_raw
